[package]
name = "webhook-replayer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
